# tp-3-pawel_kuba

./: CMakeLists.txt
Raport/: Sprawozdanie.txt
src/: main.cpp
src/scikit_build_example/: __init__.py
tests/: tests.py
